ollama/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deepseek-r1-70b
  namespace: deepseek-r1
spec:
  type: ClusterIP
  selector:
    name: deepseek-r1-70b
  ports:
  - port: 80
    name: http
    targetPort: http
    protocol: TCP
