ollama/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: deepseek-r1-route
  namespace: deepseek-r1
spec:
  to:
    kind: Service
    name: deepseek-r1-svc
  tls: null
  port:
    targetPort: http
